--- a/lib/index.css
+++ b/lib/index.css
@@ -110,7 +110,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	width: 100%;
+	width: fit-content;
 }
 
 .input-ai--wrapper svg {
